Bug 409382 - Elisa does not suppress power management while playing music when using the QtMultimedia backend
Summary: Elisa does not suppress power management while playing music when using the Q...
Status: RESOLVED FIXED
Alias: None
Product: Elisa
Classification: Applications
Component: general (other bugs)
Version First Reported In: 0.4.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Matthieu Gallien
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-07-01 19:20 UTC by Patrick Silva
Modified: 2019-07-17 20:19 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Works for me (93.96 KB, image/png)
2019-07-15 21:49 UTC, Nate Graham
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2019-07-01 19:20:40 UTC
SUMMARY
Supposedly Elisa suppresses the power management (see bug 401601),
but this feature is not working with Elisa 0.4.2 on Arch Linux.
Computer sleeps while Elisa plays music.

STEPS TO REPRODUCE
1. plays music with Elisa
2. wait your system to reach the timeout to suspend the computer
3. 

OBSERVED RESULT
computer sleeps while Elisa plays music

EXPECTED RESULT
Elisa suppresses the power management while plays music.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.16.2
KDE Frameworks Version: 5.59.0
Qt Version: 5.13.0
Comment 1 Nate Graham 2019-07-15 21:49:34 UTC
Created attachment 121535 [details]
Works for me

Works for me with everything from Git master.

Does it still happen on Neon unstable?
Comment 2 Patrick Silva 2019-07-16 16:00:59 UTC
I can't reproduce with elisa 0.4.2 on another distribution called Void.
Elisa also suppresses the power management on my Neon unstable edition.
Comment 3 Nate Graham 2019-07-16 16:22:37 UTC
Does Void use the unreleased Plasma 5.17 already?
Comment 4 Patrick Silva 2019-07-16 16:26:56 UTC
(In reply to Nate Graham from comment #3)
> Does Void use the unreleased Plasma 5.17 already?

No. It uses Plasma 5.16.3.
Comment 5 Nate Graham 2019-07-16 17:24:02 UTC
Strange.

Still, this seems like it's an Arch-specific packaging or configuration issue, since it works elsewhere. I would encourage you to report it to the Arch folks. Thanks!
Comment 6 Patrick Silva 2019-07-17 19:51:22 UTC
Reported to Arch folks
https://bugs.archlinux.org/task/63219

Comment from Antonio Rojas:
"Apparently this is only implemented in the vlc backend, which we don't use

https://cgit.kde.org/elisa.git/commit/?id=a44ad7b412674800ad43beb587011515b509d837

Please ask upstream to enable this for the qtmultimedia backend too"
Comment 7 Antonio Rojas 2019-07-17 19:56:58 UTC
https://phabricator.kde.org/D22519
Comment 8 Nate Graham 2019-07-17 19:58:28 UTC
Thanks, that's very helpful!
Comment 9 Antonio Rojas 2019-07-17 20:19:39 UTC
Git commit 72e7ab18aed9033a6a3fc6269070b85c0582e285 by Antonio Rojas.
Committed on 17/07/2019 at 20:17.
Pushed by arojas into branch '0.4'.

Implement power management supression for the qtmultimedia backend

Allow elisa to supress suspension with the qtmultimedia backend, following a44ad7b412674800ad43beb587011515b509d837 for the vlc backend

Differential Revision: https://phabricator.kde.org/D22519

M  +6    -0    src/audiowrapper_qtmultimedia.cpp

https://commits.kde.org/elisa/72e7ab18aed9033a6a3fc6269070b85c0582e285