Implement power management supression for the qtmultimedia backend

Allow elisa to supress suspension with the qtmultimedia backend, following a44ad7b412674800ad43beb587011515b509d837 for the vlc backend

BUG: 409382

Differential Revision: https://phabricator.kde.org/D22519